# Cs_Shm_Wrapper

./: Cs_Shm_Wrapper.sln
CPP_SHM_Marshalling/: CMakeLists.txt
CPP_SHM_Marshalling/include/: Person.h  dnc_wrapper.h  global.h
CPP_SHM_Marshalling/src/: CMakeLists.txt  dnc_wrapper.cc  readme.txt
DncShmWrapper/: DncShmWrapper.sln  SharedMemoryWrapper.cs
DncShmWrapper/Models/: Person.cs
cs_shm_wrapper_test/: Program.cs  cs_shm_wrapper_test.csproj  cs_shm_wrapper_test.sln
